--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
+
 <head>
     <title>Konfigurowalny Grid</title>
     <script src="grid.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
+
 <body>
     <h1>Konfigurowalny Grid</h1>
     <div class="navigation navigation--people"></div>
@@ -18,5 +20,37 @@
     <div class="grid grid--owoce">
 
     </div>
+    <div class="info">
+        <div class="info__film">
+            <h3>Całość nagraliśmy na żywo:</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hA5n2pte35w" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div class="info__linki">
+            <h4>
+                <a href="https://github.com/programistyczna-samodzielnosc/grid-configurable">
+                    Github - Kod źródłówy
+                </a>
+            </h4>
+
+            <h4>
+                <a href="https://www.facebook.com/groups/programistycznasamodzielnosc/">
+                    Grupa na Facebooku - jeśli czegoś nie rozumiesz, pytaj
+                </a>
+            </h4>
+            <h4>
+                <a href="https://www.youtube.com/playlist?list=PLfRMOBvpruEQEkIo4lgKjGCHqaDE9Kjga">
+                    Javascript 60 min + dla tych co chcą być na bieżąco z projektami.
+                </a>
+            </h4>
+            <h4>
+                <a href="https://www.youtube.com/playlist?list=PLfRMOBvpruETWbu2bHUTDUd9ows8-wTcP">
+                    Playlista dla początkujących - co trzeba umieć. Odwiedzaj często, bo często coś dodajemy :)
+                </a>
+            </h4>
+        </div>
+    </div>
 </body>
+
 </html>
